class ModelClient:
    def generate(self, prompt: str) -> str:
        raise NotImplementedError