# tools/exploit_tools.py

import subprocess
import shlex

class ExploitTools:

    def commix_request(self, options):
        try:
            args = shlex.split(options)
            if "--batch" not in args:
                args.append("--batch")

            result = subprocess.run(
                ["commix"] + args,
                stdout=subprocess.PIPE,
                stderr=subprocess.PIPE,
                timeout=30
            )

            return result.stdout.decode("utf-8")

        except Exception as e:
            return f"Error: {str(e)}"


    def sqlmap_dump_target(self, target):
        try:
            result = subprocess.run(
                ["sqlmap", "-u", target, "--batch", "--dump"],
                stdout=subprocess.PIPE,
                stderr=subprocess.PIPE,
                timeout=120
            )

            return result.stdout.decode("utf-8")

        except Exception as e:
            return f"Error: {str(e)}"


    def metasploit_exploit(self, module, target, payload=None):
        try:
            from pymetasploit3.msfrpc import MsfRpcClient

            client = MsfRpcClient("msf", port=55553)

            exploit = client.modules.use("exploit", module)
            exploit["RHOSTS"] = target

            if payload:
                pay = client.modules.use("payload", payload)
            else:
                payloads = exploit.targetpayloads()
                pay = client.modules.use("payload", payloads[0])

            return client.consoles.console().run_module_with_output(exploit, pay)

        except Exception as e:
            return f"Error: {str(e)}"


    def curl_custom_request(self, method, url, headers=None, data=None):
        try:
            cmd = ["curl", "-s", "-X", method.upper(), url]

            if headers:
                for k, v in headers.items():
                    cmd.extend(["-H", f"{k}: {v}"])

            if data:
                cmd.extend(["-d", data])

            result = subprocess.run(
                cmd,
                stdout=subprocess.PIPE,
                stderr=subprocess.PIPE,
                timeout=15
            )

            return result.stdout.decode("utf-8")

        except Exception as e:
            return f"Error: {str(e)}"


    def searchsploit_search(self, query):
        try:
            result = subprocess.run(
                ["searchsploit", query, "--json"],
                stdout=subprocess.PIPE,
                stderr=subprocess.PIPE,
                timeout=15
            )
            return result.stdout.decode("utf-8")

        except Exception as e:
            return f"Error: {str(e)}"
        

    def nuclei_scan(self, target, templates=""):
        """
        Run Nuclei vulnerability scan

        target: URL or IP
        templates: optional template path
        """

        try:
            cmd = ["nuclei", "-u", target]

            # Add templates if provided
            if templates:
                cmd.extend(["-t", templates])

            # Default behavior: fast scan
            cmd.extend([
                "-silent",
                "-no-color"
            ])

            result = subprocess.run(
                cmd,
                stdout=subprocess.PIPE,
                stderr=subprocess.PIPE,
                timeout=60
            )

            output = result.stdout.decode("utf-8")

            # If nothing found, return meaningful message
            if not output.strip():
                return "No vulnerabilities detected by Nuclei"

            return output

        except FileNotFoundError:
            return "Error: nuclei not installed or not in PATH"

        except Exception as e:
            return f"Error: {str(e)}"